<resources>
    <string name="app_name">PayNPark</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email_id">Email-Id</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Don\'t have an account ? Register here</string>
    <string name="an_automated_parking_system">An automated parking system</string>
    <string name="pay_n_park">Pay N Park</string>
    <string name="enter">Enter</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="prim_veh_no">Primary Vehicle No.</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="secondary_vehicle_no">Secondary Vehicle No.</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="bicycle">Bicycle</string>
    <string name="Logout">Logout</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email_verification">Verify Email</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="auth_failed">AUTHORISATION FAILED</string>
    <string name="emailpassword_status_fmt">Email Password Correct</string>
    <string name="profile">Profile</string>
    <string name="view_edit_user_profile">View/edit user profile</string>
    <string name="qr_code">QR Code</string>
    <string name="generate_qr_code_from_vehicle_number">Generate QR code</string>
    <string name="payment">Payment</string>
    <string name="view_payment_details">View payment details</string>
    <string name="user_log">Log</string>
    <string name="view_user_log">View user log</string>
    <string-array name="vehicle_type">
        <item>Two Wheeler</item>
        <item>Four Wheeler</item>
    </string-array>
</resources>
