<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.gaurav.paynpark.EmailPasswordActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/field_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_action_user"
        android:hint="@string/email_id"
        android:textColor="@color/cardview_light_background"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/detail"
        app:layout_constraintStart_toStartOf="@+id/detail"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/email_id"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/field_email"
        app:layout_constraintStart_toStartOf="@+id/field_email"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_action_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/email_create_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:hint="@string/password"
        android:text="@string/password"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/field_password"
        app:layout_constraintStart_toStartOf="@+id/field_password"
        app:layout_constraintTop_toBottomOf="@+id/field_email" />

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="74dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toTopOf="@+id/sign_out_button"
        app:layout_constraintEnd_toStartOf="@+id/email_create_account_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginEnd="74dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="@+id/verify_email_button"
        app:layout_constraintEnd_toStartOf="@+id/verify_email_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verify_email_button" />

    <Button
        android:id="@+id/email_create_account_button"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/create_account"
        app:layout_constraintBottom_toTopOf="@+id/verify_email_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/field_password" />

    <Button
        android:id="@+id/verify_email_button"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/email_verification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_out_button"
        app:layout_constraintTop_toBottomOf="@+id/email_create_account_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="123dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bicycle"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bicycle" />
</android.support.constraint.ConstraintLayout>
